--- a/ajax.html
+++ b/ajax.html
@@ -5,7 +5,7 @@
 	<title>Ajax</title>
 </head>
 <body>
-	<div id="new"></div>
+	<div id="new2"></div>
 	
 	<script type="text/javascript" src="scripts/addLoadEvent.js"></script>
 	<script type="text/javascript" src="scripts/getHTTPObject.js"></script>
