--- a/cha8.html
+++ b/cha8.html
@@ -4,7 +4,9 @@
 	<meta charset="utf-8" />
 	<title>Explaining the Document Object</title>
 	<link rel="stylesheet" media="screen" href="style/typography.css">
+	<script src="addLoadEvent.js"></script>
 	<script src="displayAbbreviations.js"></script>
+	<script src="displayCitations.js"></script>
 </head>
 <body>
 	<h1>What is the Document Object Model?</h1>
