--- a/cha8.html
+++ b/cha8.html
@@ -7,8 +7,14 @@
 	<script src="addLoadEvent.js"></script>
 	<script src="displayAbbreviations.js"></script>
 	<script src="displayCitations.js"></script>
+	<script src="displayAccessKeys.js"></script>
 </head>
 <body>
+	<ul id="navigation">
+		<li><a href="index.html" accesskey="1">Home</a></li>
+		<li><a href="search.html" accesskey="4">Search</a></li>
+		<li><a href="contact.html" accesskey="9">Contact</a></li>
+	</ul>
 	<h1>What is the Document Object Model?</h1>
 	<p>The <abbr title="World Wide Web Consortium"> W3C </abbr> defines 
 	the <abbr title="Document Object Model"> DOM </abbr> as:
